--- a/src/bootstrap/index.html
+++ b/src/bootstrap/index.html
@@ -10,6 +10,7 @@
   <link rel="mask-icon" href="https://ellx.io/safari-pinned-tab.svg" color="#5bbad5">
 
   <script type="module" src="sandbox.js"></script>
+  <!-- <link rel="stylesheet" href="/sandbox.css"> -->
 
 </head>
 
